// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefinementList renders markup with state 1`] = `
<ng-component
  testedWidget={[Function NgAisRefinementList]}
>
  <ais-instantsearch>
    <ais-refinement-list>
      
      <div
        class="ais-RefinementList"
      >
        
        <ul
          class="ais-RefinementList-list"
        >
          
          <li
            class="ais-RefinementList-item"
          >
            <label
              class="ais-RefinementList-label"
            >
              <input
                class="ais-RefinementList-checkbox"
                type="checkbox"
                value="foo"
              />
              <span
                class="ais-RefinementList-labelText"
              >
                <ais-highlight
                  attribute="highlighted"
                  ng-reflect-attribute="highlighted"
                  ng-reflect-hit="[object Object]"
                >
                  <span
                    class="ais-Highlight"
                  >
                    foo
                  </span>
                </ais-highlight>
              </span>
              <span
                class="ais-RefinementList-count"
              >
                100
              </span>
            </label>
          </li>
          <li
            class="ais-RefinementList-item"
          >
            <label
              class="ais-RefinementList-label"
            >
              <input
                class="ais-RefinementList-checkbox"
                type="checkbox"
                value="bar"
              />
              <span
                class="ais-RefinementList-labelText"
              >
                <ais-highlight
                  attribute="highlighted"
                  ng-reflect-attribute="highlighted"
                  ng-reflect-hit="[object Object]"
                >
                  <span
                    class="ais-Highlight"
                  >
                    bar
                  </span>
                </ais-highlight>
              </span>
              <span
                class="ais-RefinementList-count"
              >
                100
              </span>
            </label>
          </li>
          <li
            class="ais-RefinementList-item"
          >
            <label
              class="ais-RefinementList-label"
            >
              <input
                class="ais-RefinementList-checkbox"
                type="checkbox"
                value="foobar"
              />
              <span
                class="ais-RefinementList-labelText"
              >
                <ais-highlight
                  attribute="highlighted"
                  ng-reflect-attribute="highlighted"
                  ng-reflect-hit="[object Object]"
                >
                  <span
                    class="ais-Highlight"
                  >
                    foobar
                  </span>
                </ais-highlight>
              </span>
              <span
                class="ais-RefinementList-count"
              >
                100
              </span>
            </label>
          </li>
          <li
            class="ais-RefinementList-item"
          >
            <label
              class="ais-RefinementList-label"
            >
              <input
                class="ais-RefinementList-checkbox"
                type="checkbox"
                value="barfoo"
              />
              <span
                class="ais-RefinementList-labelText"
              >
                <ais-highlight
                  attribute="highlighted"
                  ng-reflect-attribute="highlighted"
                  ng-reflect-hit="[object Object]"
                >
                  <span
                    class="ais-Highlight"
                  >
                    barfoo
                  </span>
                </ais-highlight>
              </span>
              <span
                class="ais-RefinementList-count"
              >
                100
              </span>
            </label>
          </li>
        </ul>
        
      </div>
    </ais-refinement-list>
  </ais-instantsearch>
</ng-component>
`;

exports[`RefinementList renders markup without state 1`] = `
<ng-component
  testedWidget={[Function NgAisRefinementList]}
>
  <ais-instantsearch>
    <ais-refinement-list>
      
      <div
        class="ais-RefinementList"
      >
        
        <ul
          class="ais-RefinementList-list"
        >
          
        </ul>
        
      </div>
    </ais-refinement-list>
  </ais-instantsearch>
</ng-component>
`;

exports[`RefinementList should apply \`transformItems\` if specified 1`] = `
<ng-component
  testedWidget={[Function NgAisRefinementList]}
>
  <ais-instantsearch>
    <ais-refinement-list>
      
      <div
        class="ais-RefinementList"
      >
        
        <ul
          class="ais-RefinementList-list"
        >
          
          <li
            class="ais-RefinementList-item"
          >
            <label
              class="ais-RefinementList-label"
            >
              <input
                class="ais-RefinementList-checkbox"
                type="checkbox"
                value="foo"
              />
              <span
                class="ais-RefinementList-labelText"
              >
                <ais-highlight
                  attribute="highlighted"
                  ng-reflect-attribute="highlighted"
                  ng-reflect-hit="[object Object]"
                >
                  <span
                    class="ais-Highlight"
                  >
                    foo
                  </span>
                </ais-highlight>
              </span>
              <span
                class="ais-RefinementList-count"
              >
                100
              </span>
            </label>
          </li>
          <li
            class="ais-RefinementList-item ais-RefinementList-item--selected"
          >
            <label
              class="ais-RefinementList-label"
            >
              <input
                class="ais-RefinementList-checkbox"
                type="checkbox"
                value="bar"
              />
              <span
                class="ais-RefinementList-labelText"
              >
                <ais-highlight
                  attribute="highlighted"
                  ng-reflect-attribute="highlighted"
                  ng-reflect-hit="[object Object]"
                >
                  <span
                    class="ais-Highlight"
                  >
                    bar
                  </span>
                </ais-highlight>
              </span>
              <span
                class="ais-RefinementList-count"
              >
                100
              </span>
            </label>
          </li>
          <li
            class="ais-RefinementList-item"
          >
            <label
              class="ais-RefinementList-label"
            >
              <input
                class="ais-RefinementList-checkbox"
                type="checkbox"
                value="foobar"
              />
              <span
                class="ais-RefinementList-labelText"
              >
                <ais-highlight
                  attribute="highlighted"
                  ng-reflect-attribute="highlighted"
                  ng-reflect-hit="[object Object]"
                >
                  <span
                    class="ais-Highlight"
                  >
                    foobar
                  </span>
                </ais-highlight>
              </span>
              <span
                class="ais-RefinementList-count"
              >
                100
              </span>
            </label>
          </li>
          <li
            class="ais-RefinementList-item"
          >
            <label
              class="ais-RefinementList-label"
            >
              <input
                class="ais-RefinementList-checkbox"
                type="checkbox"
                value="barfoo"
              />
              <span
                class="ais-RefinementList-labelText"
              >
                <ais-highlight
                  attribute="highlighted"
                  ng-reflect-attribute="highlighted"
                  ng-reflect-hit="[object Object]"
                >
                  <span
                    class="ais-Highlight"
                  >
                    barfoo
                  </span>
                </ais-highlight>
              </span>
              <span
                class="ais-RefinementList-count"
              >
                100
              </span>
            </label>
          </li>
        </ul>
        
      </div>
    </ais-refinement-list>
  </ais-instantsearch>
</ng-component>
`;

exports[`RefinementList should be hidden with autoHideContainer 1`] = `
<ng-component
  testedWidget={[Function NgAisRefinementList]}
>
  <ais-instantsearch>
    <ais-refinement-list>
      
    </ais-refinement-list>
  </ais-instantsearch>
</ng-component>
`;
